<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- name of the application -->
    <string name="app_name">iConvert</string>
    <string name="openexchangerates_app_id">0d78f65495d040d38a9e073b46b0b281</string>

    <!-- Euro's text view text-->
    <string name="euro_text_view">EUR</string>

    <!-- Euro's edit text hint -->
    <string name="euro_edit_text">Currency</string>

    <!-- USD  text view text-->
    <string name="usd_currency_text_view">USD</string>

    <!-- Button for performing the conversion -->
    <string name="convert_btn">Convert</string>
    <string name="reset_btn">Reset</string>

    <string name="currencies_text_view">Query OpenExchangeRate</string>

    <!-- button for change both text view -->
    <string name="swap_text_view">Swap</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <!-- Image view content description-->
    <string name="iv_content_descr"> Swap </string>

    <string name="refresh">Refresh</string>
    <string name="search_hint">Rechercher...</string>
    <string name="home_tab_title">Home</string>
    <string name="convert_tab_title">Convert</string>
    <string name="devise_tab_title">Devises</string>

    <!-- tabs titles -->
    <string-array name="tabs_title">
        <item>Home</item>
        <item>Convert</item>
        <item>Currencies</item>
    </string-array>
    <string-array name="currencies_list">
        <item>AUD</item>
        <item>BTC</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>INR</item>
        <item>MXN</item>
        <item>NGN</item>
        <item>USD</item>
        <item>XAF</item>
        <item>XOF</item>
    </string-array>
    <!-- numbers of tabs -->
    <string name="tabs_numbers">3</string>

    <!-- Projec description -->
    <string name="project_description">
        "Bienvenue sur iConvert

        Description de l\'application:
            L'application iConvert est une application développé au cours de ma formation dans le cadre du module IGR201, au sein de Telecom ParisTech.
        Elle permet de convertir de la monnaie d'une devise vers une autre devise.
        L'application est assez simple, puisqu'elle n'effectue qu\'un nombre fini de conversion.
        De plus l'application possède sa propre base de données locale, qui sera remplie par les soins de l\'utilisateur.

        Utilisation de l\'application:
        Après avoir installé l\'application, l'utilisateur doit mettre à jour sa base. Pour ce faire, il clique sur le bouton \"Refresh\" qui se trouve dans le menu de l'application.
        Le taux d'échange est fourni par l'Api d'OpenExchangeRate."
    </string>
    <string name="currencies_title_text">1 USD : </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
