<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <Spinner
                android:id="@+id/left_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/currencies_list"
                android:layout_marginTop="30sp"
                android:layout_marginLeft="10dp"
                android:padding="6dp"
                android:textColor="#000000"
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/left_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/euro_edit_text"
                android:inputType="numberDecimal"
                android:layout_marginLeft="0dp" />
        </LinearLayout>

       <!-- <ImageView
                android:id="@+id/swap_iv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/iv_content_descr"
                android:src="@drawable/swap3_128"
                android:scaleType="fitCenter"
                android:maxHeight="30dp"
                android:maxWidth="30dp"/> -->

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <Spinner
                android:id="@+id/right_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/currencies_list"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:padding="6dp"
                android:textColor="#000000"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/right_text_view_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:padding="6dp"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="48dp" >

        <Button
            android:id="@+id/convert_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_btn"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_btn"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/rateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#0d6cf2"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"/>


</LinearLayout>